--- a/FourBitFullAdder/pom.xml
+++ b/FourBitFullAdder/pom.xml
@@ -1,21 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>edu.csudh.ooad</groupId>
-    <artifactId>FourBitFullAdder</artifactId>
+    <groupId>com.yourcompany</groupId>
+    <artifactId>fourbitadder</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.source>11</maven.compiler.source> <!-- Use a compatible Java version -->
         <maven.compiler.target>11</maven.compiler.target>
-        <groovy.version>3.0.8</groovy.version>
+        <groovy.version>3.0.8</groovy.version> <!-- Compatible with Java 11 -->
         <spock.version>2.0-M5-groovy-3.0</spock.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
